<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_search">

    <fragment
            android:id="@+id/nav_search"
            android:name="id.web.jagungbakar.chordzilla.ui.home.HomeFragment"
            android:label="@string/menu_search"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_favorite"
            android:name="id.web.jagungbakar.chordzilla.ui.gallery.GalleryFragment"
            android:label="@string/menu_favorite"
            tools:layout="@layout/fragment_gallery" />

    <fragment
            android:id="@+id/nav_my_song"
            android:name="id.web.jagungbakar.chordzilla.ui.mysong.MySongsFragment"
            android:label="@string/menu_my_song"
            tools:layout="@layout/fragment_my_songs" />

    <fragment
            android:id="@+id/nav_history"
            android:name="id.web.jagungbakar.chordzilla.ui.tools.ToolsFragment"
            android:label="@string/menu_history"
            tools:layout="@layout/fragment_tools" />

    <fragment
            android:id="@+id/nav_chart"
            android:name="id.web.jagungbakar.chordzilla.ui.chart.ChartFragment"
            android:label="@string/menu_chart"
            tools:layout="@layout/fragment_chart" />

    <fragment
            android:id="@+id/nav_about"
            android:name="id.web.jagungbakar.chordzilla.ui.about.AboutFragment"
            android:label="@string/menu_about"
            tools:layout="@layout/fragment_about" />

    <fragment
            android:id="@+id/nav_request_song"
            android:name="id.web.jagungbakar.chordzilla.ui.request.RequestChordsFragment"
            android:label="@string/menu_request_chords"
            tools:layout="@layout/fragment_request_chords" />
</navigation>